syntax = "proto3";

option java_package = "com.lcdev25.idp.grpc";
option java_multiple_files = true;

package auth;

service AuthService {
  rpc validateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  string userId = 2;
  repeated string roles = 3;
}